# MuseSP

./: .gitattributes  .gitignore  Cargo.toml  README.md  config.example.toml  pyproject.toml
.github/: copilot-instructions.md
assets/builtin_musics/: list.txt
docs/: architecture.md  gameplay-design.md  porting-progress.md
musesp/: Cargo.toml  main.py
musesp/pages/: home.py  music_list.py
musesp/src/: gameplay.rs  gameplay_page.rs  main.rs  menu_page.rs  pages.rs
musesp/src/gameplay/: display_compute.wgsl  gameplay.rs  lib.rs  line.wgsl  line_subdivide.wgsl  line_subdivide_eval.wgsl  line_subdivide_final.wgsl  renderer3d.rs  shader_compute.wgsl  shader_pass1.wgsl  shader_pass1_eval.wgsl  shader_pass1_final.wgsl  shader_pass2.wgsl
musesp/src/pages/: home.rs  music_list.rs
musesp_config/: Cargo.toml  config.py
musesp_editor/: Cargo.toml  main.py
musesp_editor/src/: main.rs
musesp_gameplay/: Cargo.toml  game_shader.py  gameplay.py  gameplay_page.py  menu_page.py
musesp_ui/: Cargo.toml  application.py  components.py  font.py  pool.py  profile.py  router.py
musesp_ui/components/: button.py  canvas.py  core.py  image.py  image_button.py  label.py  renderer_canvas.py  scroll_list.py  spacer.py
musesp_ui/renderer/: pipeline.py  shader.py
musesp_ui/src/: application.rs  components.rs  game.wgsl  lib.rs  rect.wgsl  renderer.rs  router.rs  texture.wgsl
musesp_ui/src/components/: button.rs  canvas.rs  core.rs  image.rs  image_button.rs  label.rs  renderer_canvas.rs  scroll_list.rs  spacer.rs
musesp_ui/src/renderer/: draw_list.rs  frame_pipeline.rs  render_pipeline.rs  types.rs  ui_renderer.rs  wgpu_renderer.rs
(+7 files in other folders)
