[build-system]
requires = ["setuptools>=83.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "musesp"
version = "0.1.0"
requires-python = ">=3.14"
description = "Add your description here"
readme = "README.md"
dependencies = [
    "numpy>=2.5.1",
    "pygame-ce>=2.5.7",
    "zstd>=1.5.7.3",
]

[project.scripts]
musesp = "musesp.main:main"
musesp-editor = "musesp_editor.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["musesp*"]
