[package]
name = "musesp"
version = "0.1.0"
edition = "2024"

[dependencies]
musesp_config = { path = "../musesp_config" }
musesp_ui = { path = "../musesp_ui" }
wgpu = "30.0.0"
winit = "0.30.13"
toml = "1.1.2"
tokio = { version = "1.52.3", features = ["full"] }
async-trait = "0.1.89"
bytemuck = "1.25.1"
