[package]
name = "musesp_editor"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
env_logger = "0.11.11"
log = "0.4.33"
musesp_config = { version = "0.1.0", path = "../musesp_config" }
musesp_ui = { version = "0.1.0", path = "../musesp_ui" }
tokio = { version = "1.52.3", features = ["full"] }
