[package]
name = "musesp_ui"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
bytemuck = "1.25.1"
glyphon = "0.12.0"
image = "0.25.10"
log = "0.4.33"
musesp_config = { version = "0.1.0", path = "../musesp_config" }
resvg = "0.47.0"
tiny-skia = "0.12.0"
tokio = { version = "1.52.3", features = ["full"] }
usvg = "0.47.0"
wgpu = "30.0.0"
winit = "0.30.13"
